CLOSED - task 210: On resource view page allow tags and icons to flow/wrap properly http://github.com/mpowering/django-orb/issues/issue/210

--- a/orb/static/orb/style.css
+++ b/orb/static/orb/style.css
@@ -252,3 +252,25 @@ div.date-picker-row-fluid {
 .page_navigator, .orderby {
 	padding:10px 0;
 }
+
+div.category {
+	padding-bottom:10px;
+}
+
+div.resourcetag {
+	display:inline-block; 
+	width:120px; 
+	min-height:120px; 
+	text-align:center; 
+	margin: auto;
+}
+
+.file-row {
+	padding-bottom: 10px;
+}
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
